# hello-chess

./: README.md  pyproject.toml
hello_chess/: evaluator.py  main.py  pgn_parser.py  short.py
tests/: test_hello_chess.py
