[tool.poetry]
name = "hello-chess"
version = "0.1.0"
description = ""
authors = ["Erik <TrebbleBiscuit@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
chess = "^1.9.2"
rich = "^12.5.1"
pickleDB = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
